[package]
name = "rres"
version = "0.1.3"
edition = "2021"
authors = ["Namkhai B. <me@forkbomb9.ch>"]
description = "A xrandr replacement to gather display resolutions"
homepage = "https://sr.ht/~f9/rres"
repository = "https://git.sr.ht/~f9/rres"
license = "GPL-3.0-or-later"
categories = ["os"]
keywords = ["xrandr", "options", "monitor", "display"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
drm = "0.7"
eyre = "0.6"
lexopt = "0.2"
log = "0.4"

[dependencies.simple_logger]
version = "4.0"
default-features = false
features = ["stderr", "colors"]
