[package]
name = "rres"
version = "0.1.5"
edition = "2021"
authors = ["Namkhai B. <nk@nkeor.me>"]
description = "A xrandr replacement to gather display resolutions"
homepage = "https://sr.ht/~nkeor/rres"
repository = "https://git.sr.ht/~nkeor/rres"
license = "GPL-3.0-or-later"
categories = ["os"]
keywords = ["xrandr", "options", "monitor", "display"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
drm = "0.9"
anyhow = "1.0"
lexopt = "0.3"
log = "0.4"

[dependencies.simple_logger]
version = "4.0"
default-features = false
features = ["stderr", "colors"]
